--- a/movement_control/project/Objects/GD32_HCSR04.build_log.htm
+++ b/movement_control/project/Objects/GD32_HCSR04.build_log.htm
@@ -30,68 +30,65 @@ Rebuild target 'Target 1'
 assembling startup_gd32f10x_md.s...
 compiling gd32f10x_crc.c...
 compiling gd32f10x_enet.c...
-compiling gd32f10x_exti.c...
-compiling gd32f10x_exmc.c...
-compiling gd32f10x_adc.c...
-compiling gd32f10x_can.c...
 compiling gd32f10x_dma.c...
-compiling gd32f10x_bkp.c...
-compiling gd32f10x_dac.c...
+compiling gd32f10x_adc.c...
 compiling gd32f10x_dbg.c...
 compiling system_gd32f10x.c...
+compiling gd32f10x_dac.c...
+compiling gd32f10x_exmc.c...
+compiling gd32f10x_bkp.c...
+compiling gd32f10x_can.c...
+compiling gd32f10x_exti.c...
 compiling gd32f10x_fwdgt.c...
-compiling gd32f10x_fmc.c...
 compiling gd32f10x_gpio.c...
-compiling gd32f10x_pmu.c...
+compiling gd32f10x_fmc.c...
 compiling gd32f10x_misc.c...
 compiling gd32f10x_i2c.c...
-compiling gd32f10x_spi.c...
 compiling gd32f10x_rtc.c...
-compiling pid.c...
-..\User\pid.h(10): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\pid.c: 1 warning, 0 errors
-compiling gd32f10x_sdio.c...
+compiling gd32f10x_pmu.c...
 compiling gd32f10x_rcu.c...
+compiling gd32f10x_sdio.c...
+compiling gd32f10x_spi.c...
 compiling gd32f10x_timer.c...
-compiling gd32f10x_usart.c...
+compiling pid.c...
 compiling gd32f10x_wwdgt.c...
-compiling systick.c...
+compiling gd32f10x_usart.c...
 compiling gd32f10x_it.c...
-..\User\gd32f10x_it.c(170): warning:  #177-D: variable "receive_flag"  was declared but never referenced
+..\User\gd32f10x_it.c(187): warning:  #175-D: subscript out of range
+              if(receive_data[8] == last_receive_data){
+..\User\gd32f10x_it.c(192): warning:  #175-D: subscript out of range
+                  receive_gate_left_x = receive_data[6];
+..\User\gd32f10x_it.c(193): warning:  #175-D: subscript out of range
+                  receive_gate_right_x = receive_data[7];
+..\User\gd32f10x_it.c(173): warning:  #177-D: variable "receive_flag"  was declared but never referenced
       static int32_t receive_flag = 0;
-..\User\gd32f10x_it.c: 1 warning, 0 errors
-compiling main.c...
-..\User\pid.h(10): warning:  #1-D: last line of file ends without a newline
-  #endif
-..\User\main.c(286): warning:  #1-D: last line of file ends without a newline
-  }
-..\User\main.c(129): warning:  #550-D: variable "Enc2"  was set but never used
-  	int32_t Enc2 = 0; //behind-right wheel
-..\User\main.c(143): warning:  #177-D: variable "sensor_Value"  was declared but never referenced
-  	uint8_t sensor_Value[4];
-..\User\main.c(148): warning:  #550-D: variable "turn_flag"  was set but never used
-  	int32_t turn_flag = 0;
-..\User\main.c(150): warning:  #550-D: variable "search_time"  was set but never used
-  	int32_t search_time = 0;
-..\User\main.c(151): warning:  #177-D: variable "counter"  was declared but never referenced
-  	int counter = 0;
-..\User\main.c(152): warning:  #177-D: variable "status"  was declared but never referenced
-  	int status = 0;  // status 0: avoiding obstacle; status 1: tracking
-..\User\main.c: 8 warnings, 0 errors
+..\User\gd32f10x_it.c: 4 warnings, 0 errors
+compiling systick.c...
 compiling led_driver.c...
+compiling main.c...
+..\User\main.c(213): warning:  #177-D: variable "sensor_Value"  was declared but never referenced
+  	uint8_t sensor_Value[4];
+..\User\main.c(222): warning:  #177-D: variable "search_time"  was declared but never referenced
+  	int32_t search_time = 0;
+..\User\main.c(223): warning:  #177-D: variable "counter"  was declared but never referenced
+  	int counter = 0;
+..\User\main.c(224): warning:  #177-D: variable "status"  was declared but never referenced
+  	int status = 0;  // status 0: avoiding obstacle; status 1: tracking
+..\User\main.c(401): warning:  #1-D: last line of file ends without a newline
+  }
+..\User\main.c: 5 warnings, 0 errors
 compiling key_driver.c...
+compiling tim_driver.c...
 compiling oled_driver.c...
 compiling enc_driver.c...
-compiling tim_driver.c...
 compiling uart_driver.c...
-compiling pwm_driver.c...
 compiling Photoelectric.c...
+compiling pwm_driver.c...
 compiling hcsr04_driver.c...
 linking...
-Program Size: Code=10918 RO-data=2366 RW-data=52 ZI-data=1212  
+Program Size: Code=14208 RO-data=2364 RW-data=88 ZI-data=2608  
 FromELF: creating hex file...
-".\Objects\GD32_HCSR04.axf" - 0 Error(s), 10 Warning(s).
+".\Objects\GD32_HCSR04.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -104,7 +101,7 @@ Package Vendor: GigaDevice
   D:\Keil_v5\GigaDevice\GD32F10x_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
